--- a/src/components/Roadmap/roadmap.css
+++ b/src/components/Roadmap/roadmap.css
@@ -1,5 +1,8 @@
+.roadmap{
+    background-color: #F0FCE8;
+}
 .box{
-    width: 100px;
+    width: 27em;
     height: 100px;
     background-color: green;
 
