--- a/src/components/Collection.component/Collection.css
+++ b/src/components/Collection.component/Collection.css
@@ -1,3 +1,11 @@
+/* #collection{
+    background-color: #1F2F4A;
+} */
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto+Condensed:wght@700&family=Seymour+One&display=swap');
+#icon123{
+  font-family: 'Roboto Condensed', sans-serif;
+  letter-spacing: 1px;
+}
 .button123 {
     background-color: #4CAF50;
     border: none;
@@ -23,3 +31,6 @@
     color: white;
   }
   
+  .bgimg{
+    /* background-image: ; */
+  }
