--- a/src/components/Roadmap/roadmap.css
+++ b/src/components/Roadmap/roadmap.css
@@ -2,11 +2,21 @@
     background-color: #F0FCE8;
 }
 .box{
+    padding: 6%;
     width: 27em;
-    height: 100px;
+    height: 125px;
     background-color: green;
 
 }
 .box h1{
     color: white;
+}
+#card22{
+    width: 13rem;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
+    margin-right: 5px;
+    /* border: 1px solid black; */
 }
