--- a/src/components/card component/card.css
+++ b/src/components/card component/card.css
@@ -1,8 +1,12 @@
-.card{
-    width: 85vw;
+.card2{
+    width: 13rem;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
     margin-right: 5px;
+}
+.logo{
+    inline-size: -webkit-fill-available;
+    background-color: #F4F4F4;
 }
