--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,3 +1,87 @@
-.footer{
+.footer {
+    padding-top: 70px;
     background-color: black;
+    /* height: 100%; */
+    min-height: 50vh;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.footer p,h5 {
+    font-size: 1.1rem;
+    color: white;
+}
+
+h5 {
+    padding-bottom: 30px;
+}
+
+h6 {
+    text-align: left;
+    padding-left: 50px;
+}
+
+.list__item {
+    background: transparent !important;
+    padding-left: 0 !important;
+    border: none !important;
+}
+
+.list__item a {
+    text-decoration: none;
+    color: #fff;
+    opacity: 85%;
+    font-size: 0.9rem;
+    text-align: left;
+    font-family:'Poppins', sans-serif;
+}
+
+.newsletter {
+    color: #fff;
+    padding: 7px 25px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: none;
+    outline: none;
+    font-size: 0.8rem;
+    background: #1c1c1c;
+    border-radius: 0%;
+    
+}
+
+
+.list_box {
+    padding-left: 50px;
+    display: flex;
+}
+
+
+.fly-btn {
+    margin-top: 18%;
+    margin-left: 1%;
+    width: 50px;
+    height: 32px;
+    padding: 2px 8px;
+    border-radius: 0%;
+}
+
+::placeholder {
+    color: white;
+}
+
+.logo-footer {
+    margin-top: -46px;
+    margin-right: 5%;
+    margin-left: -10%;
+}
+
+.sitemap-style {
+    margin-right: 1%;
+    margin-left: 4%;
+    font-family:'Poppins', sans-serif;
+}
+
+.text-left {
+    font-family:'Poppins', sans-serif;
+    margin-left: 5%;
 }
