--- a/src/components/Roadmap/roadmap.css
+++ b/src/components/Roadmap/roadmap.css
@@ -1,10 +1,10 @@
-.roadmap{
+#roadmap{
     background-color: #F0FCE8;
 }
 .box{
     padding: 6%;
     width: 27em;
-    height: 125px;
+    height: 135px;
     background-color: green;
 
 }
@@ -18,5 +18,14 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
     margin-right: 5px;
+    /* border: outset; */
     /* border: 1px solid black; */
+}
+.container {
+    margin-bottom: 20px !important;
+}
+.logo1{
+    inline-size: -webkit-fill-available;
+    background-color: #F4F4F4;
+    border: outset;
 }
