--- a/src/components/card component/card.css
+++ b/src/components/card component/card.css
@@ -5,6 +5,7 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
     margin-right: 5px;
+    border: outset;
 }
 .logo{
     inline-size: -webkit-fill-available;
