--- a/src/components/Roadmap/roadmap.css
+++ b/src/components/Roadmap/roadmap.css
@@ -29,3 +29,8 @@
     background-color: #F4F4F4;
     border: outset;
 }
+@media only screen and (max-width: 700px) {
+    .logo1{
+        width: auto;
+    }
+}
