--- a/src/components/card component/card.css
+++ b/src/components/card component/card.css
@@ -1,10 +1,10 @@
 .card2{
-    width: 13rem;
+    /* width: 13rem;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
-    margin-right: 5px;
+    margin-right: 5px; */
     border: outset;
 }
 .logo{
