--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -16,7 +16,7 @@
 }
 .meet{
     min-width: fit-content;
-    margin-right: -8rem;
+    /* margin-right: 25rem; */
     font-weight: 400;
 }
 @media only screen and (max-width: 700px) {
