--- a/src/components/FAQ/faq.css
+++ b/src/components/FAQ/faq.css
@@ -64,7 +64,11 @@
   font-size: 0.8rem;
 }
 
-
+@media only screen and (max-width: 400px) {
+  #faq{
+    flex-direction: row-reverse;
+  }
+}
 
 
 
