--- a/src/components/Team component/team.css
+++ b/src/components/Team component/team.css
@@ -16,6 +16,6 @@
 
 .mycard h6{
     text-align: center;
-    margin-right: 23%;
-    margin-top: -5%;
+    /* margin-right: 23%;
+    margin-top: -5%; */
 } 
