--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -11,6 +11,18 @@
     height: 0px;
     border: 1px dashed green;
 }
+#csscard{
+    width: 22rem;
+    border: none;
+    border-left-style: outset;
+    border-bottom-style: ridge;
+}
+#csscard1{
+    width: 22rem;
+    border: none;
+    border-right-style: inset;
+    border-bottom-style: ridge;
+}
 .card1{
     border: 1px solid #D9D9D9;
 }
@@ -19,6 +31,37 @@
     /* margin-right: 25rem; */
     font-weight: 400;
 }
+@media only screen and (max-width: 1200px) {
+   #csscard1{
+       margin-right: -11%;
+   }
+}
+@media only screen and (max-width: 1100px) {
+    #csscard1{
+        margin-right: -14%;
+    }
+    /* .cssabout1{
+        flex-direction: column;
+     } */
+    #csscard1{
+        /* width: 16rem; */
+        /* border: none;
+        border-right-style: inset;
+        border-bottom-style: ridge; */
+    }
+    #cssimg177{
+        width: 16rem !important;
+    }
+    .list_box {
+        padding-left: 2px !important;
+        /* display: flex; */
+    }
+ }
+ @media only screen and (max-width: 1000px) {
+     .cssabout1{
+         flex-flow: wrap;
+     }
+ }
 @media only screen and (max-width: 700px) {
     .dashline{
          display: none;
@@ -27,7 +70,13 @@
         flex-direction: column;
     }
     .circle{
-        margin-right: 5in !important;
+        margin-left: 1in !important;
+    }
+    .cssabout1{
+       flex-direction: column;
+    }
+    #csscard{
+        width: 17rem !important;
     }
     /* #css1111{
         margin-left: -3.5in;
