--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -85,3 +85,8 @@ h5 {
     font-family:'Poppins', sans-serif;
     margin-left: 5%;
 }
+@media only screen and (max-width: 400px) {
+   #footerbutton{
+       margin-top: 21px;
+   }
+}
