--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -31,6 +31,11 @@
     /* margin-right: 25rem; */
     font-weight: 400;
 }
+@media only screen and (max-width: 1300px) {
+    #csscard1{
+        margin-right: -15%;
+    }
+ }
 @media only screen and (max-width: 1200px) {
    #csscard1{
        margin-right: -11%;
