--- a/src/components/FAQ/faq.css
+++ b/src/components/FAQ/faq.css
@@ -9,13 +9,17 @@
 .accordian {
   width: 500px;
   font-family:'Poppins', sans-serif;
-  margin-right: 5% ;
+  /* margin-right: 5% ; */
 }
 
 .item {
   background: lightgray;
   margin-bottom: 5px;
   padding: 10px 20px;
+}
+.faq-style h1{
+  /* margin-left: -15%; */
+  font-size: 2.5rem;
 }
 
 .title {
@@ -50,7 +54,7 @@
 .faq-style p {
   font-size: 1.2rem;
   font-family:'Poppins', sans-serif;
-  margin-left: -15%;
+  /* margin-left: -15%; */
 }
 
 .content-ans {
@@ -68,6 +72,24 @@
   #faq{
     flex-direction: row-reverse;
   }
+  
+}
+@media only screen and (max-width: 370px) {
+  #faq{
+    flex-direction: row-reverse;
+  }
+  .faq-style p {
+    font-size: 1rem;
+    font-family:'Poppins', sans-serif;
+    /* margin-left: -15%; */
+  }
+  .faq-style h1 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    font-family:'Poppins', sans-serif;
+    /* margin-left: -15%; */
+  }
+  
 }
 
 
