--- a/src/components/card component/card.css
+++ b/src/components/card component/card.css
@@ -5,7 +5,8 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
     margin-right: 5px; */
-    border: outset;
+    padding: 7px;
+    border: 1px solid lightgrey;
 }
 .logo{
     inline-size: -webkit-fill-available;
