Error handling done

--- a/src/components/Navbar/nav.css
+++ b/src/components/Navbar/nav.css
@@ -5,9 +5,9 @@ a:hover {
     text-decoration: none;
     color: white !important;
   }
-#nbn{
+/* #nbn{
   padding-top: 1%;
-}
+} */
   #navimg{
      height: 7rem !important;
   }
