--- a/src/components/Navbar/nav.css
+++ b/src/components/Navbar/nav.css
@@ -1,26 +1,27 @@
 a:hover {
-    color: #4CAF50 !important;
-  }
-  a{
-    text-decoration: none;
-    color: white !important;
-  }
+  color: #4caf50 !important;
+}
+a {
+  text-decoration: none;
+  color: white !important;
+}
 /* #nbn{
   padding-top: 1%;
 } */
-  #navimg{
-     height: 7rem !important;
-  }
-  
+#navimg {
+  height: 7rem !important;
+}
+
 .button37 {
   background-color: #13aa52;
   border: 1px solid #13aa52;
   border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px 0;
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
-  font-family: "Akzidenz Grotesk BQ Medium", -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: "Akzidenz Grotesk BQ Medium", -apple-system, BlinkMacSystemFont,
+    sans-serif;
   font-size: 16px;
   font-weight: 400;
   outline: none;
@@ -35,7 +36,7 @@ a:hover {
 }
 
 .button37:hover {
-  box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
+  box-shadow: rgba(0, 0, 0, 0.15) 0 3px 9px 0;
   transform: translateY(-2px);
 }
 
@@ -43,4 +44,8 @@ a:hover {
   .button37 {
     padding: 10px 30px;
   }
+}
+
+.nav-item {
+  padding: 10px;
 }
