--- a/src/components/Staking Card/stakingCard.css
+++ b/src/components/Staking Card/stakingCard.css
@@ -3,12 +3,12 @@
   justify-content: space-around;
 }
 
-.logo {
+.logoStake {
   width: 350px;
   height: 200px;
   margin-left: -83px;
 }
-.card2 {
+.cardStake {
   overflow: hidden;
   width: 200px;
   margin-right: 20px;
@@ -59,5 +59,6 @@
   position: absolute;
   top: 0px;
   left: 3px;
-  color: #62c382;
+  /* color: #62c382; */
+  color: black;
 }
