--- a/src/components/Staking Card/stakingCard.css
+++ b/src/components/Staking Card/stakingCard.css
@@ -4,15 +4,15 @@
 }
 
 .logoStake {
-  width: 350px;
+  width: 200px;
   height: 200px;
-  margin-left: -83px;
+  /* margin-left: -20px; */
 }
 .cardStake {
   overflow: hidden;
-  width: 200px;
+  width: 210px;
   margin-right: 20px;
-  padding-top: 0;
+  padding: 0;
   border-radius: 10px;
   border: 1px solid #4caf50;
   box-shadow: 3px 3px 8px 0px rgba(97, 158, 136, 0.75);
