--- a/src/Pages/Staking/staking.css
+++ b/src/Pages/Staking/staking.css
@@ -2,16 +2,24 @@ html,
 body {
   height: 100%;
   margin: 0;
+  overflow-x: hidden;
   padding: 0;
 }
-
+/* .contentStaking{
+  margin-left: 90px;
+} */
 .stack-main {
   background-image: url("/src/assets/bg.png");
-  height: 120vh;
-  min-height: 100%;
   background-size: cover;
+  margin-right: auto;
+  width: 100%;
+  height:140vh;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
+  padding-left: 20px;
+  padding-bottom: 4rem;
+  padding-right: 20px;
   align-items: center;
 }
 
