--- a/src/components/Collection.component/Collection.css
+++ b/src/components/Collection.component/Collection.css
@@ -5,6 +5,22 @@
   font-weight: bolder;
   font-size: 4.3vw;
 }
+.result {
+  background-color: #434343;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 800px;
+  height: 50px;
+  padding: 10px;
+  margin-top: 50px;
+  margin:0 auto;
+  border-radius: 15px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
 .button123 {
     background-color: #4CAF50;
     border: none;
