--- a/src/components/Staking Card/stakingCard.css
+++ b/src/components/Staking Card/stakingCard.css
@@ -9,15 +9,21 @@
   /* margin-left: -20px; */
 }
 .cardStake {
-  overflow: hidden;
-  width: 210px;
+  /* overflow: hidden; */
+  width: 220px;
   margin-right: 20px;
-  padding: 0;
+  /* padding: 0; */
   border-radius: 10px;
   border: 1px solid #4caf50;
   box-shadow: 3px 3px 8px 0px rgba(97, 158, 136, 0.75);
   -webkit-box-shadow: 3px 3px 8px 0px rgba(97, 158, 136, 0.75);
   -moz-box-shadow: 3px 3px 8px 0px rgba(97, 158, 136, 0.75);
+
+
+    /* border: 1px solid #904caf;
+  box-shadow: 3px 3px 8px 0px rgba(97, 116, 158, 0.75);
+  -webkit-box-shadow: 3px 3px 8px 0px rgba(97, 108, 158, 0.75);
+  -moz-box-shadow: 3px 3px 8px 0px rgba(134, 97, 158, 0.75); */
 }
 
 .card2 :hover {
