--- a/src/components/Roadmap/roadmap.css
+++ b/src/components/Roadmap/roadmap.css
@@ -1,127 +1,146 @@
-#roadmap{
-    background-color: #F0FCE8;
+.road-title {
+    padding-top: 10%;
+    margin-bottom: -150px;
 }
-.box{
-    padding: 4%;
-    width: 13em;
-    height: 135px;
-    background-color: #558a1a;
+.backgroundRoadmap{
+    background-color: black;
 
 }
-.cssroad{
-    height: 11rem;
-}
-.cssroadimg{
-    background-color: white;
-    border: 1px solid lightgrey;
-    height: 11rem;
-    align-self: center;
-}
-.box h2{
+.road-title h1{
+    text-align: center;
+    font-size: 2.5rem solid bold;
     color: white;
-}
-#card22{
-    width: 13rem;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 20px;
-    margin-right: 5px;
-}
-.container {
-    margin-bottom: 20px !important;
-}
-.logo1{
-    inline-size: -webkit-fill-available;
-    background-color: #F4F4F4;
-    padding: 8px;
-    align-self: center;
-    border: 1px solid lightgrey;
-}
-@media only screen and (max-width: 790px) {
-    .logo1{
-        width: auto;
-    }
-    .cssroad{
-        padding: 6% !important;
-    }
-    .cssroadimg{
-        display:none;
-    }
-    .RoadMapText h4{
-        font-size: 5vw;
-    }
-    .cssroadimg{
-        display:none;
-    }
-}
-@media only screen and (max-width: 700px) {
-    .logo1{
-        width: auto;
-    }
-    .RoadMapText p{
-        font-size: xx-small !important;
-    }
-    .box{
-        height: 150px;
-        align-self: center;
-    }
-    .box h2{
-        padding-top: 20px;
-    }
-    .cssroad{
-        padding: 6% !important;
-        height: 12rem;
-    }
-    .RoadMapText h4{
-        font-size: 5vw;
-    }
-    .cssroadimg{
-        display:none;
-    }
+    /* margin-bottom: 20%; */
+    font-family: 'Chakra Petch', sans-serif;
 }
 
-@media only screen and (max-width: 560px) {
-    .logo1{
-        width: auto;
-    }
-    .RoadMapText p{
-        font-size: x-small !important;
-    }
-    .box{
-        height: 100px;
-        align-self: center;
-    }
-    .box h2{
-        padding-top: 20px;
-    }
-    .cssroad{
-        padding: 6% !important;
-        height: 12rem;
-    }
-    .cssroadimg{
-        display:none;
-    }
+
+.roadmap {
+    background-image:url(../../assets/roadmap-line.png);
+    background-color: black;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding-top: 10%;
+    padding-bottom: 18%;
 }
-@media only screen and (max-width: 413px) {
-    .logo1{
-        width: auto;
+
+
+
+.content-img img {
+    width: 220px;
+    border-radius: 50%;
+    border: 8px solid #030e01;
+    box-shadow: 0 0 0 4px #070f2c
+    
+}
+
+.content-textCard p{
+    color: white;
+    font-family: 'Chakra Petch', sans-serif;
+    padding-top: 5%;
+    text-align: left;
+}
+
+.content-textCard h3{
+    color: white;
+    font-family: 'Chakra Petch', sans-serif;
+    padding-top: 10%;
+    text-align: left;
+}
+
+.content-textCard {
+    background-color: #171010;
+    width: 28rem;
+    padding-left: 4%;
+    padding-right: 4%;
+    border-radius: 15px;
+    border: 8px solid #030e01;
+     box-shadow: 0 0 0 1px #004800;
+}
+
+
+.myCircle{
+    width: 50px;
+    height:50px;
+    padding: 19px;
+    border-radius: 50% 50%;
+    /* align-self: center; */
+    background-color: rgb(78, 196, 78);
+}
+
+.myCircle p {
+    margin-top: -35%;
+    margin-left: -70%;
+    font-size: small;
+    font-family: 'Chakra Petch', sans-serif;
+}
+
+.roadmap-content1 {
+    margin-top: 10%;
+}
+
+.timeline1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-left: 20%;
+}
+
+
+.roadmap-content2 {
+    margin-top: 10%;
+}
+
+
+.timeline2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-right: 15%;
+}
+
+.roadmap-content3 {
+    margin-top: 15%;
+}
+
+.timeline3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-left: 20%;
+}
+
+.roadmap-content4 {
+    margin-top: 3%;
+} 
+
+.timeline4 {
+     display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-right: 13%;
+}
+
+
+@media (max-width:900px) {
+    .roadmap{
+        background-image: none;
+        
     }
-    .RoadMapText p{
-        font-size: xx-small !important;
+    .timeline1{
+        align-items: center !important;
+        flex-direction: column;
     }
-    .box{
-        height: 100px;
-        align-self: center;
+    .timeline2{
+        align-items: center !important;
+        flex-direction: column;
     }
-    .box h2{
-        padding-top: 20px;
+    .timeline3{
+        flex-direction: column;
+        align-items: center !important;
     }
-    .cssroad{
-        padding: 6% !important;
-        height: 12rem;
-    }
-    .cssroadimg{
-        display:none;
+    .timeline4{
+        align-items: center !important;
+        flex-direction: column;
     }
 }
