--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -25,7 +25,7 @@
     background-size: contain;
   }
 .aboutus{
-    margin-top: -9%;
+    margin-top: -6%;
     writing-mode: vertical-lr;
     text-orientation: mixed;
     /* height: 40%; */
@@ -109,9 +109,9 @@
     }
  }
  @media only screen and (max-width: 1000px) {
-     .cssabout1{
-         flex-flow: wrap;
-     }
+    .rowabout123{
+        display: block;
+    }
  }
 @media only screen and (max-width: 700px) {
     .dashline{
