--- a/src/components/Pagginnation/styles.css
+++ b/src/components/Pagginnation/styles.css
@@ -39,6 +39,14 @@
   margin-bottom: 120px;
   max-width: -webkit-fill-available !important;
 }
+.fontpagg{
+  font-size: 3.3vw;
+  font-weight: 900;
+}
+.buttoncarousel{
+  color: green !important;
+  /* background-color: white !important; */
+}
 #head{
 font-family: 'Chakra Petch', sans-serif;
 margin: 25px;
@@ -84,5 +92,36 @@ font-size: xx-large;
   align-self: center;
   cursor: pointer;
   outline: none;
+}
+.eAyARa {
+  box-sizing: border-box;
+  -webkit-transition: all 0.3s ease;
+  /* transition: green; */
+  font-size: 1.6em;
+  /* background-color: rgba(103,58,183,0.1); */
+  color: green;
+  box-shadow: 0 0 2px 0px #333;
+  border-radius: 50%;
+  border: none;
+  padding: 0;
+  width: 50px;
+  height: 50px;
+  min-width: 50px;
+  line-height: 50px;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  align-self: center;
+  cursor: pointer;
+  outline: none;
+  background-color: white;
+}
+.eAyARa:hover {
+  color: white;
+  background-color: green;
+}
+.eWjCzc:hover:enabled, .eWjCzc:focus:enabled {
+  color: #fff;
+  background-color: green !important;
+  box-shadow: 0 0 2px 0 #333;
 }
 
