--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 @import "bootstrap/dist/css/bootstrap.css";
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch&family=Oswald:wght@700&family=Roboto+Condensed:wght@700&display=swap');
 .App {
   text-align: center;
+  font-family: 'Chakra Petch', sans-serif;
   background-color: #000000;
 
 }
-
+body{
+  background-color: #000000;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
