--- a/src/components/Navbar/nav.css
+++ b/src/components/Navbar/nav.css
@@ -16,7 +16,7 @@ a {
 .button37 {
   background-color: #13aa52;
   border: 1px solid #13aa52;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px 0;
   box-sizing: border-box;
   color: #fff;
