--- a/src/components/Staking Card/stakingCard.css
+++ b/src/components/Staking Card/stakingCard.css
@@ -12,7 +12,7 @@
   /* overflow: hidden; */
   width: 220px;
   margin-right: 20px;
-  /* padding: 0; */
+  padding: 20px;
   border-radius: 10px;
   border: 1px solid #4caf50;
   box-shadow: 3px 3px 8px 0px rgba(97, 158, 136, 0.75);
