--- a/src/components/Roadmap/roadmap.css
+++ b/src/components/Roadmap/roadmap.css
@@ -249,6 +249,10 @@
         background-image: none;
         
     }
+    .backgroundRoadmap{
+        margin-top: 20%;
+    
+    }
     .content-img{
         margin-left:70px;
         width: 100%;
