--- a/src/Pages/Staking/staking.css
+++ b/src/Pages/Staking/staking.css
@@ -16,18 +16,23 @@ body {
   background-image: linear-gradient(to right, #5a3f37, #2c7744);
   color:white;
 }
+.StakeCardDeck{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 20px;
+}
 .stack-main {
   /* background-image: url("/src/assets/bg.png"); */
   background-size: cover;
-  margin-right: auto;
+  /* margin-right: auto; */
   width: 100%;
   height:140vh;
-  min-height: 100%;
+  /* min-height: 100%; */
   display: flex;
   flex-direction: column;
   padding-left: 20px;
   padding-bottom: 4rem;
-  padding-right: 20px;
+  /* padding-right: 20px; */
   align-items: center;
 }
 
@@ -117,4 +122,20 @@ input[type="checkbox"] {
   width: 200px;
   background-color: #61B42E;
   /* border-radius: 10px; */
+}
+
+@media (max-width:950px) {
+  .StakeCardDeck{
+    grid-template-columns: repeat(2,2fr) !important;
+  }
+}
+@media (max-width:810px) {
+  .StakeCardDeck{
+    grid-template-columns: repeat(2,2fr) !important;
+  }
+}
+@media (max-width:500px) {
+  .StakeCardDeck{
+    grid-template-columns: 1fr !important;
+  }
 }
