--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,168 +1,191 @@
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch&family=Oswald:wght@700&family=Roboto+Condensed:wght@700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch&family=Oswald:wght@700&family=Roboto+Condensed:wght@700&display=swap');
 
-#aboutroboto{
-    font-family: 'Chakra Petch', sans-serif;
-    font-weight: 900;
-    font-size: 3.3vw;
-  }
-.circle{
-    width: 100px;
-    height:100px;
-    padding: 20px;
-    border-radius: 50% 50%;
-    background-color: green;
-}
-#about{
-    /* background-image: url(../../assets/roboto\ nft\ assets/about-bg.png);
-     */
-     background-image: url(../../assets/about-bg.png);
-    height: 120vh;
-    background-size: 100% 132%;
-          /* background-repeat: "no-repeat" !important; */
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position-y: bottom;
-    background-size: contain;
-  }
-.aboutus{
-    margin-top: -9%;
-    writing-mode: vertical-lr;
-    text-orientation: mixed;
-    /* height: 40%; */
-    margin-bottom: 6%;
-    margin-block: auto;
-}
-.dashline{
-    margin-top: 40px;
-    width: 518px;
-    height: 0px;
-    border: 1px dashed green;
-}
-#csscard{
-    width: 17rem;
-    /* height: 320rem; */
-    padding: 3%;
-     margin-right: 4%;
-    /* border: none; */
-    border: 1px solid lightgrey;
-    /* border-bottom-style: ridge; */
-}
-#csscard1{
-    width: 22rem;
-    border: none;
-    border-right-style: inset;
-    border-bottom-style: ridge;
-}
-#aboutImage{
-    width: 13rem !important;
-    height: 14rem !important;
-}
-.card-title{
-    font-size: medium;
-    font-weight: 500;
-}
-.pic55{
-    margin-top: -40%;
+    #aboutroboto{
+        font-family: 'Chakra Petch', sans-serif;
+        font-weight: 900;
+        font-size: 3.3vw;
 
-}
-.card-text{
-    font-size: small;
-}
-.card1{
-    border: 1px solid #D9D9D9;
-}
-.meet{
-    min-width: fit-content;
-    /* margin-right: 25rem; */
-    font-weight: 400;
-}
-@media only screen and (max-width: 1300px) {
-    #csscard1{
-        margin-right: -15%;
     }
- }
-@media only screen and (max-width: 1200px) {
-   #csscard1{
-       margin-right: -11%;
-   }
-}
-@media only screen and (max-width: 1100px) {
-    #csscard1{
-        margin-right: -14%;
+    .button123{
+        border-radius:0 !important;
     }
-    /* .cssabout1{
-        flex-direction: column;
-     } */
+    .circle{
+        width: 100px;
+        height:100px;
+        padding: 20px;
+        border-radius: 50% 50%;
+        background-color: green;
+    }
+    #about{
+        /* background-image: url(../../assets/roboto\ nft\ assets/about-bg.png);
+        */
+        background-image: url(../../assets/about-bg.png);
+        height: 120vh;
+        background-size: 100% 132%;
+            /* background-repeat: "no-repeat" !important; */
+        width: 100%;
+        /* margin-bottom: 20%; */
+        background-repeat: no-repeat;
+        background-position-y: bottom;
+        background-size: contain;
+    }
+    .aboutus{
+        margin-top: -9%;
+        writing-mode: vertical-lr;
+        align-items: center;
+        margin-left: 550px;
+        text-orientation: mixed;
+        /* height: 40%; */
+        /* margin-bottom: 6%; */
+        /* margin-block: auto; */
+    }
+    .dashline{
+        margin-top: 40px;
+        width: 518px;
+        height: 0px;
+        border: 1px dashed green;
+    }
+    #csscard{
+        width: 17rem;
+        /* height: 320rem; */
+        padding: 3%;
+        margin-right: 4%;
+        /* border: none; */
+        border: 1px solid lightgrey;
+        /* border-bottom-style: ridge; */
+    }
     #csscard1{
-        width: 16rem;
-        /* border: none;
+        width: 22rem;
+        border: none;
         border-right-style: inset;
-        border-bottom-style: ridge; */
-    }
-    
-    #aboutImage{
-        height: 20rem !important;
-    }
-    .list_box {
-        padding-left: 2px !important;
-        /* display: flex; */
-    }
- }
- @media only screen and (max-width: 1000px) {
-     .cssabout1{
-         flex-flow: wrap;
-     }
- }
-@media only screen and (max-width: 700px) {
-    .dashline{
-         display: none;
-    }
-    .circleline{
-        flex-direction: column;
-    }
-    .circle{
-        margin-left: 1in !important;
-    }
-    .cssabout1{
-       flex-direction: column;
-    }
-    #csscard{
-        width: 17rem !important;
-    }
-    /* #css1111{
-        margin-left: -3.5in;
-    } */
-}
-@media only screen and (max-width: 560px) {
-    .dashline{
-         display: none;
-    }
-    .circleline{
-        flex-direction: column;
-    }
-    .circle{
-        margin-left: 1in !important;
-    }
-    .csscard{
-        width: 8rem  !important;
-    }
-    .cssabout1{
-       flex-direction: column;
+        border-bottom-style: ridge;
     }
     #aboutImage{
-    width:15rem !important;
+        width: 13rem !important;
+        height: 14rem !important;
     }
-    #csscard{
-       margin-left: 8%;
-       margin-bottom: 2%;
+    .card-title{
+        font-size: medium;
+        font-weight: 500;
     }
     .pic55{
-        margin-left: -2rem;
-        margin-top: -3rem;
-        width: -webkit-fill-available;
-        height: -webkit-fill-available;
-      }
-    /* #css1111{
-        margin-left: -3.5in;
-    } */
-}
+        margin-top: -40%;
+
+    }
+    .card-text{
+        font-size: small;
+    }
+    .card1{
+        border: 1px solid #D9D9D9;
+    }
+    .meet{
+        min-width: fit-content;
+        /* margin-right: 25rem; */
+        font-weight: 400;
+    }
+    @media only screen and (max-width: 1300px) {
+        #csscard1{
+            margin-right: -15%;
+        }
+    }
+    @media only screen and (max-width: 1200px) {
+    #csscard1{
+        margin-right: -11%;
+    }
+    }
+    @media only screen and (max-width: 1100px) {
+        #csscard1{
+            margin-right: -14%;
+        }
+        /* .cssabout1{
+            flex-direction: column;
+        } */
+        #csscard1{
+            width: 16rem;
+            /* border: none;
+            border-right-style: inset;
+            border-bottom-style: ridge; */
+        }
+        
+        #aboutImage{
+            height: 20rem !important;
+        }
+        .list_box {
+            padding-left: 2px !important;
+            /* display: flex; */
+        }
+    }
+    @media only screen and (max-width: 1000px) {
+        .cssabout1{
+            flex-flow: wrap;
+        }
+    }
+    @media only screen and (max-width: 700px) {
+        .dashline{
+            display: none;
+        }
+        .circleline{
+            flex-direction: column;
+        }
+        .circle{
+            margin-left: 1in !important;
+        }
+        .cssabout1{
+        flex-direction: column;
+        }
+        #csscard{
+            width: 17rem !important;
+        }
+        /* #css1111{
+            margin-left: -3.5in;
+        } */
+    }
+    @media only screen and (max-width: 560px) {
+        .dashline{
+            display: none;
+        }
+        #aboutroboto{
+            font-weight: 900;
+            font-size: 5.3vw;
+        }
+        #aboutroboto span{
+            font-weight: 900;
+            font-size: 5.3vw;
+        }
+        .circleline{
+            flex-direction: column;
+        }
+        .circle{
+            margin-left: 1in !important;
+        }
+        .csscard{
+            width: 8rem  !important;
+        }
+        .cssabout1{
+        flex-direction: column;
+        }
+        #aboutImage{
+        width:15rem !important;
+        }
+        #csscard{
+        margin-left: 8%;
+        margin-bottom: 2%;
+        }
+        .pic55{
+            margin-left: -2rem;
+            margin-top: -14%;
+            width: 120%;
+            height:120%;
+        }
+        #about{
+           margin-top: 15%;
+            margin-bottom: 10%;
+        
+        }
+        .aboutus{
+            display: none;
+        }
+        /* #css1111{
+            margin-left: -3.5in;
+        } */
+    }
