--- a/src/components/Staking Card/stakingCard.css
+++ b/src/components/Staking Card/stakingCard.css
@@ -9,16 +9,18 @@
   /* margin-left: -20px; */
 }
 .cardStake {
+  height: fit-content;
+  border: 1px solid rgb(37,37,37);
   /* overflow: hidden; */
   width: 220px;
-  margin-right: 20px;
+  /* margin-right: 20px; */
   padding: 20px;
   border-radius: 10px;
-  border: 1px solid #4caf50;
+  /* border: 1px solid #4caf50;
   box-shadow: 3px 3px 8px 0px rgba(97, 158, 136, 0.75);
   -webkit-box-shadow: 3px 3px 8px 0px rgba(97, 158, 136, 0.75);
-  -moz-box-shadow: 3px 3px 8px 0px rgba(97, 158, 136, 0.75);
-
+  -moz-box-shadow: 3px 3px 8px 0px rgba(97, 158, 136, 0.75); */
+ 
 
     /* border: 1px solid #904caf;
   box-shadow: 3px 3px 8px 0px rgba(97, 116, 158, 0.75);
