--- a/src/components/cardsonConnect/cardsconnect.css
+++ b/src/components/cardsonConnect/cardsconnect.css
@@ -82,10 +82,13 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   color: black;
 }
 
-@media all and (max-width: 500px) {
+@media (max-width: 500px) {
   .card-list {
     /* On small screens, we are no longer using row direction but column */
     flex-direction: column;
+  }
+  .cardsText{
+    font-size: 5.3vw;
   }
   #cardsconnect{
     margin-bottom: 600px;
