--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -30,10 +30,10 @@
         background-size: contain;
     }
     .aboutus{
-        margin-top: -9%;
+        margin-top: -6%;
         writing-mode: vertical-lr;
         align-items: center;
-        margin-right: -550px !important;
+        margin-left: 670px !important;
         text-orientation: mixed;
         /* height: 40%; */
         /* margin-bottom: 6%; */
@@ -91,6 +91,9 @@
     @media only screen and (max-width: 1200px) {
     #csscard1{
         margin-right: -11%;
+    }
+    .aboutus{
+        margin-left: 425px;
     }
     }
     @media only screen and (max-width: 1100px) {
