--- a/src/components/Collection.component/Collection.css
+++ b/src/components/Collection.component/Collection.css
@@ -25,7 +25,7 @@
   margin-bottom: 20px;
 }
 .button123 {
-    background-color: #4CAF50;
+    background-color: #61B42E;;
     border: none;
     color: white;
     padding: 16px 32px;
@@ -41,11 +41,11 @@
   .button123 {
     background-color: white; 
     color: black; 
-    border: 2px solid #4CAF50;
+    border: 2px solid #61B42E;;
   }
   
   .button123:hover {
-    background-color: #4CAF50;
+    background-color: #61B42E;;
     color: white;
   }
   
@@ -70,7 +70,7 @@
   margin-top: -21%;
     margin-left: 27px;
 }
-@media only screen and (max-width: 700px) {
+/* @media only screen and (max-width: 700px) {
   #icon123{
     font-size: 10.3vw;
   }
@@ -90,7 +90,7 @@
     display: none;
   }
   
-}
+} */
 #collection{
   margin-top: 20px; 
 }
@@ -101,10 +101,10 @@
 .mystyle{
   /* background:linear-gradient(to bottom, rgba(0,0,0,0), #151515) !important; */
   background-image: url(../../assets/roboto\ nft\ assets/hero-beackground.jpg);
-		height: 135vh;
+		height: 117vh;
 		background-size: 100% 132%;
 		background-repeat: "no-repeat" !important;
-    width: 100%;
+    width: auto;
 
     
 }
@@ -138,12 +138,12 @@
     cursor: pointer;
   }
   .buttondivtag{
-    width: max-content;
+    width: 100%;
   }
 
   
   .button123:hover {
-    background-color: #4CAF50;
+    background-color: #61B42E;;
     color: white;
   }
   #css1{
@@ -166,8 +166,39 @@
     margin-top: -87%;
     margin-left: 60%;
 }
+@media (max-width:1300px) {
+  #collection{
+    margin-top: 92px !important;
+  }
+}
+@media (max-width:1200px) {
+  .img5 {
+    margin-top: -6%;
+    margin-left: 27px;
+    height: -webkit-fill-available;
+    width: -webkit-fill-available;
+}
+.collectionrem{
+  margin-left: 0rem !important;
+  margin-top: 4rem !important;
+}
+#collection {
+  margin-top: 47px !important;
+}
+}
 
-@media (max-width: 850px) {
+@media (max-width:1000px) {
+  .mystyle {
+    /* background: linear-gradient(to bottom, rgba(0,0,0,0), #151515) !important; */
+    /* background-image: url(http://localhost:3000/static/media/hero-beackground.e877908….jpg); */
+    height: 86vh;
+    /* background-size: 100% 132%;
+    background-repeat: "no-repeat" !important;
+    width: auto; */
+}
+  .rowcollection{
+    flex-direction: column-reverse;
+  }
   .fontstylesize{
     font-size: 4.3vw;
   }
@@ -178,14 +209,82 @@
     flex-flow: column-reverse !important;
   }
   .img5 {
-    margin-top: -21%;
-    margin-left: -108px;
+    /* margin-top: 0%; */
+    margin-top: 16%;
+    margin-left: -12px;
 }
 .collectioncss{
   width: -webkit-fill-available !important;
 }
 #css1{
-  margin-left: 4rem !important;
+  margin-left: 0rem !important;
+}
+#icon123 {
+  font-family: 'Chakra Petch', sans-serif;
+  /* font-family: ""; */
+  letter-spacing: 3px;
+  font-weight: revert;
+  font-size: 7.3vw;
+  margin-top: 24px;
+}
+
+}
+@media (max-width: 920px) {
+  .rowcollection{
+    flex-direction: column-reverse;
+  }
+  .fontstylesize{
+    font-size: 4.3vw;
+  }
+  .button123{
+    font-size: x-large
+  }
+  .rowcontainer123{
+    flex-flow: column-reverse !important;
+  }
+  .img5 {
+    /* margin-top: 0%; */
+    margin-top: 16%;
+    margin-left: -12px;
+}
+.collectioncss{
+  width: -webkit-fill-available !important;
+}
+#css1{
+  margin-left: 0rem !important;
+}
+#icon123 {
+  font-family: 'Chakra Petch', sans-serif;
+  /* font-family: ""; */
+  letter-spacing: 3px;
+  font-weight: revert;
+  font-size: 7.3vw;
+  margin-top: 24px;
+}
+
+}
+@media (max-width: 850px) {
+  .rowcollection{
+    flex-direction: column-reverse;
+  }
+  .fontstylesize{
+    font-size: 4.3vw;
+  }
+  .button123{
+    font-size: x-large
+  }
+  .rowcontainer123{
+    flex-flow: column-reverse !important;
+  }
+  .img5 {
+    margin-top: 0%;
+    margin-left: 9px;
+  }
+.collectioncss{
+  width: -webkit-fill-available !important;
+}
+#css1{
+  margin-left: 0rem !important;
 }
 #icon123 {
   font-family: 'Chakra Petch', sans-serif;
@@ -227,6 +326,33 @@
   }
   
 }
+@media(max-width:600px) {
+  #icon123{
+    font-size: 7vw;
+  }
+  .mystyle{
+    height: 179vh;
+    width: 103%;
+  }
+  .img5 {
+    margin-top: -13% !important;
+    margin-left: -111px !important;
+    height: 145%;
+    width: 91%;
+}
+  #css1{
+    margin-left: 0rem !important;
+    padding-bottom: 5rem;
+
+  }
+  .button123{
+    font-size: unset !important;
+}
+#collection{
+  /* padding-top: 5rem; */
+}
+  
+}
 @media(max-width:480px) {
   #icon123{
     font-size: 7vw;
@@ -235,9 +361,9 @@
     height: 125vh;
   }
   .img5{
-    margin-top: -24% !important;
+    margin-top: -14% !important;
     margin-left: -21px !important;
-    height: 170%;
+    height: 130%;
     width: 100%;
 }
   #css1{
@@ -252,4 +378,17 @@
   /* padding-top: 5rem; */
 }
   
+}
+@media (max-width: 375px){
+.img5 {
+    margin-top: -24% !important;
+    margin-left: -48px !important;
+    height: 130%;
+    width: 100%;
+}
+}
+@media (max-width:280px) {
+  .button123{
+    margin-left: 0rem !important;
+  }
 }
