--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -131,7 +131,7 @@ ul {
 
 .subscribe-form button i {
     color: white;
-    font-size: 25px;
+    font-size: 15px;
     transform: rotate(-6deg);
 }
 
@@ -152,15 +152,100 @@ hr {
     padding: 1.5%;
 }
 
-/* .fly-btn {
-    background-color:green;
-    padding: 5px 15px;
-    border-radius: 0%;
-    border: 1px solid grey;
-} */
+@media(max-width:320px) {
 
-@media only screen and (max-width: 400px) {
-   #footerbutton{
-       margin-top: 21px;
+    .footer-logo img {
+        margin-right: -8%;
+        margin-top: -5%;
+    }  
+    
+    .footer-social-icon {
+        margin-right: -7%;
+        margin-bottom: 10%;
+        margin-top: -15%;
+    }
+
+    .footer-widget{
+        margin-left: 1%;
+    }
+}
+
+
+@media(max-width:375px) {
+
+    .footer-logo img {
+        margin-left: 10%;
+        margin-top: -5%;
+        margin-bottom: 2%;
+    }  
+    
+    .footer-social-icon {
+        margin-left: -25%;
+        margin-bottom: 10%;
+    }
+
+    .footer-widget-heading, .footer-text, .subscribe-form {
+        margin-left: 5%;
+    }
+
+    .footer-widget ul li a {
+        margin-left: 10%;
+    }
+}
+
+@media (max-width:425px) {
+
+    .footer-widget-heading, .footer-text, .subscribe-form {
+        margin-left: 5%;
+    }
+
+    .footer-widget ul li a {
+        margin-left: 10%;
+    }
+
+    .footer-logo img {
+        margin-bottom: -3%;
+    }
+}
+
+@media (min-width:768px) {
+    .footer-logo img {
+        margin-left: -30%;
+        margin-bottom: 3%;
+    }
+
+    .footer-social-icon {
+        margin-left: -70%;
+    }
+}
+
+@media (min-width:1024px) {
+   .footer-logo img, .footer-social-icon {
+    margin-left: 10%;
    }
+
+   .footer-logo img {
+    margin-top: 0%;
+    max-width: 250px;
+   }
+
+   .footer-social-icon {
+    margin-left: -7%;
+    margin-top: -15%;
+   }
+}
+
+@media (min-width:1440px) {
+    
+    .footer-logo img {
+        margin-top: 4%;
+    }
+
+    .footer-section {
+        margin-left: -3%;
+    }
+
+    hr {
+        margin-left: 10%;
+    }
 }
