--- a/src/components/Roadmap/roadmap.css
+++ b/src/components/Roadmap/roadmap.css
@@ -43,6 +43,7 @@
 }
 .backgroundRoadmap{
     background-color: black;
+    margin-top: 10%;
 
 }
 .road-title h1{
@@ -171,6 +172,7 @@
 }
 
 
+
 @media (max-width:900px) {
     .roadmap{
         background-image: none;
@@ -178,7 +180,7 @@
         
     }
     .content-img{
-        margin-right: 40px;
+        margin-left: 30px;
         align-items: center !important;
     }
     .roadmappercentage{
@@ -200,7 +202,8 @@
     .content-textCard{
         border: 1px solid rebeccapurple;
         margin-left: -100px !important;
-        width: 30rem !important;
+        width: 31rem !important;
+        padding:0 10px;
         /* margin: 0 auto !important; */
         align-items: center !important;
     }
@@ -249,10 +252,7 @@
         background-image: none;
         
     }
-    .backgroundRoadmap{
-        margin-top: 20%;
     
-    }
     .content-img{
         margin-left:70px;
         width: 100%;
@@ -289,7 +289,7 @@
     }
     
 }
-@media (max-width:400px) {
+@media (max-width:428px) {
     .roadmap{
         background-image: none;
         
@@ -317,10 +317,10 @@
     }
     .content-textCard{
         border: 1px solid rebeccapurple;
-        margin-left: -100px !important;
-        width: 20rem !important;
+        margin-left: -120px !important;
+        width: 21rem !important;
         /* margin: 0 auto !important; */
-        align-items: center !important;
+        /* align-items: center !important; */
     }
     .content-textCard h3{
         font-size:large;
@@ -329,4 +329,255 @@
         font-size:small;
     }
     
+}
+@media (max-width:415px) {
+    .roadmap{
+        background-image: none;
+        
+    }
+    /* .backgroundRoadmap{
+        margin-top: -310px !important;
+    } */
+    .content-img{
+        margin-left:30px;
+        width: 100%;
+        align-items: center !important;
+    }
+    .roadmappercentage{
+        align-items: center !important;
+        margin: 20px auto !important;
+        
+    }
+    .roadmappercentage2{
+        align-items: center !important;
+        margin: 20px auto !important;
+        
+    }
+    .roadmapCompOne{
+        flex-direction: column ;
+    }
+    .roadmapCompTwo{
+        flex-direction: column-reverse;
+    }
+    .content-textCard{
+        border: 1px solid rebeccapurple;
+        margin-left: -130px !important;
+        width: 21rem !important;
+        /* margin: 0 auto !important; */
+        /* align-items: center !important; */
+    }
+    .content-textCard h3{
+        font-size:large;
+    }
+    .content-textCard p{
+        font-size:small;
+    }
+    .roadmap-card{
+        margin-left: -1% !important;
+   
+    }
+}
+@media (max-width:375px) {
+    .roadmap{
+        background-image: none;
+        
+    }
+    .content-img{
+        margin-left:15px;
+        width: 100%;
+        align-items: center !important;
+    }
+    .roadmappercentage{
+        align-items: center !important;
+        margin: 20px auto !important;
+        
+    }
+    .roadmappercentage2{
+        align-items: center !important;
+        margin: 20px auto !important;
+        
+    }
+    .roadmapCompOne{
+        flex-direction: column ;
+    }
+    .roadmapCompTwo{
+        flex-direction: column-reverse;
+    }
+    .content-textCard{
+        border: 1px solid rebeccapurple;
+        margin-left: -130px !important;
+        width: 21rem !important;
+        /* margin: 0 auto !important; */
+        /* align-items: center !important; */
+    }
+    .roadmap-card{
+        margin-left: -3% !important;
+   
+    }
+    .content-textCard h3{
+        font-size:large;
+    }
+    .content-textCard p{
+        font-size:small;
+    }
+    
+}
+
+@media (max-width:320px) {
+    .road-title h1{
+        margin-top: 20%;
+        margin-bottom: 2%;
+    }
+
+    .content-img img {
+        width: 120px;
+    }
+
+    .content-img {
+        margin-left:-1%;
+    }
+
+    .content-textCard {
+        /* max-width: 220px; */
+        width: 280px !important;
+        margin-bottom: 25%;
+    }
+
+    .roadmap-card{
+        margin-left: -8% !important;
+   
+    }
+
+    .roadmap-content-card {
+        margin-left: 3% !important;
+        padding: 0 20px;
+    }
+
+}
+
+
+@media (max-width:375px) {
+    .road-title {
+        margin-top: 90%;
+        margin-bottom: 2%;
+    }
+
+    .content-img img {
+        width: 150px;
+        background-position: center;
+        margin-left: 40%;
+        margin-bottom: 5%;
+    }
+
+    .content-textCard {
+        max-width: 250px;
+        margin-bottom: 25%;
+    }
+
+    .roadmap-card{
+        margin-right: 5%;
+    }
+
+    .roadmap-content-card {
+        margin-right: -18%;
+    }
+}
+
+
+@media (max-width:425px) {
+    .road-title {
+        margin-top: 80%;
+        margin-bottom: 2%;
+    }
+
+    .content-img img {
+        width: 190px;
+        background-position: center;
+        margin-left: 19%;
+        margin-bottom: 5%;
+    }
+
+    .content-textCard {
+        max-width: 300px;
+        margin-bottom: 20%;
+    }
+
+    .roadmap-card{
+        margin-right: 2%;
+    }
+
+    .roadmap-content-card {
+        margin-right: -8%;
+    }
+
+    .content-textCard h3, p {
+        margin-left: 3%;
+    }
+}
+
+@media (max-width:768px) {
+    .road-title h1 {
+        margin-top: 20%;
+        margin-bottom: 2%;
+    }
+
+    .content-img img {
+        width: 250px;
+        background-position: center;
+        margin-left: 15%;
+        margin-bottom: 5%;
+        margin-top: -45%;
+    }
+
+    .content-textCard {
+        max-width: 400px;
+        margin-bottom: 40%;
+    }
+
+    .roadmap-card{
+        margin-left: 5%;
+    }
+
+    .roadmap-content-card {
+        margin-right: -12%;
+    }
+
+    .content-textCard h3, p {
+        margin-left: 3%;
+    }
+}
+
+
+@media (min-width:1024px) {
+    .road-title h1 {
+        margin-top: 5%;
+    }
+
+    
+}
+
+
+@media (min-width:1440px) {
+
+    .road-title {
+        margin-top: -20%;
+        margin-bottom: -20%;
+    }
+
+    .roadmap {
+        margin-top: 15%;
+        background-attachment: absolute;
+    }
+
+    .roadmapCompOne {
+        margin-top: 20%;
+    }
+
+    .content-img {
+        margin-top: -25%;
+    }
+
+    .roadmap-content-card {
+        margin-top: -15%;
+    }
 }
