--- a/src/components/cardsonConnect/cardsconnect.css
+++ b/src/components/cardsonConnect/cardsconnect.css
@@ -82,6 +82,14 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   color: black;
 }
 
+@media (max-width: 600px) {
+ 
+  #cardsconnect{
+    margin-bottom: 700px;
+  background-image: none;
+
+  }
+}
 @media (max-width: 500px) {
   .card-list {
     /* On small screens, we are no longer using row direction but column */
@@ -92,6 +100,8 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   }
   #cardsconnect{
     margin-bottom: 600px;
+  background-image: none;
+
   }
 }
 
